third_party/move/move-compiler/tests/move_check/typing/uninferred_type_unpack_assign.exp
error[E04010]: cannot infer type
  ┌─ tests/move_check/typing/uninferred_type_unpack_assign.move:5:9
  │
5 │         S{} = S{};
  │         ^^^ Cannot infer the type parameter `T` for generic struct `0x8675309::M::S`. Try providing a type parameter.

